--- a/reference.bib
+++ b/reference.bib
@@ -22,7 +22,6 @@
 	urldate = {2016-08-22},
 	publisher = {WORLD SCIENTIFIC},
 	author = {Lee, S. Y.},
-	month = nov,
 	year = {2011}
 }
 
@@ -36,8 +35,7 @@
 	number = {10},
 	urldate = {2016-08-19},
 	journal = {Physical Review Special Topics - Accelerators and Beams},
-	author = {Klingbeil, H. and Laier, U. and Ningel, K. P. and Schäfer, S. and Thielmann, C. and Zipfel, B.},
-	month = oct,
+	author = {Klingbeil, H. and others},
 	year = {2011}
 }
 
@@ -62,6 +60,7 @@
 }
 
 @inproceedings{zipfel_recent_2011,
+	address = {San Sebastian, Spain},
 	title = {Recent {Progress} on the {Technical} {Realization} of the {Bunch} {Phase} {Timing} {System} {BuTiS}},
 	url = {http://accelconf.web.cern.ch/accelconf/ipac2011/papers/mopc145.pdf},
 	urldate = {2016-08-23},
@@ -73,16 +72,18 @@
 }
 
 @inproceedings{beck_new_2012,
+	address = {Kolkata, India},
 	title = {The new {White} {Rabbit} based {Timing} {System} for the {FAIR} {Facility}},
 	url = {http://accelconf.web.cern.ch/Accelconf/pcapac2012/papers/fria01.pdf},
 	urldate = {2016-08-23},
 	booktitle = {Proc. of {PCaPAC}},
-	author = {Beck, D. and Bär, R. and Kreider, M. and Prados, C. and Rauch, S. and Terpstra, W. and Zweig, M.},
+	author = {Beck, D. and others},
 	year = {2012},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\RQMPHJGC\\Beck et al. - 2012 - The new White Rabbit based timing system for the F.pdf:application/pdf}
 }
 
 @inproceedings{hoffmann_fesafront-end_2008,
+	address = {Ljubljana, Slovenia},
 	title = {{FESA}–{The} front-{End} {Software} {Architecture} at {FAIR}},
 	url = {http://accelconf.web.cern.ch/AccelConf/pc08/papers/wep007.pdf},
 	urldate = {2016-08-23},
@@ -93,9 +94,10 @@
 }
 
 @inproceedings{kester_status_2014,
+	address = {Dresden, Germany},
 	title = {Status of the {FAIR} {Accelerator} {Facility}},
 	booktitle = {Proc. of {IPAC}},
-	author = {Kester, O. and Barth, W. and Dolinskyy, O. and Hagenbuck, F. and Knie, K. and Reich-Sprenger, H. and Simon, H. and Spiller, P. J. and Weinrich, U. and Winkler, M. and {others}},
+	author = {Kester, O. and others},
 	year = {2014},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\B79WDNFJ\\Kester et al. - 2014 - Status of the FAIR accelerator facility.pdf:application/pdf}
 }
@@ -116,7 +118,6 @@
 	language = {en},
 	publisher = {Springer},
 	author = {Wiedemann, H.},
-	month = jul,
 	year = {2015},
 	note = {Google-Books-ID: oR0\_CgAAQBAJ},
 	keywords = {Science / Mechanics / General, Science / Physics / Atomic \& Molecular, Science / Physics / General, Science / Physics / Nuclear, Science / Weights \& Measures, Technology \& Engineering / Measurement}
@@ -142,10 +143,9 @@
 @misc{noauthor_fair_2011,
 	title = {{FAIR} - {Facility} for {Antiproton} and {Ion} {Research}},
 	url = {https://www.gsi.de//forschungbeschleuniger/fair.htm},
-	abstract = {FAIR – das zukünftige Beschleunigerzentrum In den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neFAIR wird Teilchenstrahlen mit bisher unerreichter Intensität und Qualität liefern. Ihr Herzstück ist ein Ringbeschleuniger mit einem Umfang von 1100 Metern. An diesen schließt sich ein komplexes System von Speicherringen und Experimentierstationen an. Die bereits existierenden GSI-Beschleuniger die},
+	abstract = {FAIR – das zukünftige Beschleunigerzentrum In den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neFAIR wird Teilchenstrahlen mit bisher unerreichter Intensität und Qualität liefern. Ihr Herzstück ist ein Ringbeschleuniger mit einem Umfang von 1100 Metern. An diesen schließt sich ein komplexes System von Speicherringen und Experimentierstationen an. Die bereits existierenden GSI-Beschleuniger die},
 	urldate = {2016-09-20},
 	journal = {GSI},
-	month = may,
 	year = {2011},
 	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\ABZ5CDSE\\fair.html:text/html}
 }
@@ -153,7 +153,7 @@
 @misc{noauthor_gsi_2011,
 	title = {{GSI} {Helmholtzzentrum} für {Schwerionenforschung} {GmbH}},
 	url = {https://www.gsi.de//start/aktuelles.htm},
-	abstract = {GSI Helmholtzzentrum für Schwerionenforschung Das GSI Helmholtzzentrum für Schwerionenforschung in Darmstadt betreibt eine große, weltweit einmalige Beschleunigeranlage für Ionen. Forscherinnen und Forscher aus aller Welt nutzen die Anlage für Experimente, um neue Erkenntnisse über den Aufbau dIn den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neue Einblicke in den Aufbau der Materie und die EBei GSI wurde eine bahnbrechende neue Krebstherapie entwickelt. Grundlage hierfür waren langjährige Forschungsarbeiten und die große Beschleunigeranlage für Ionenstrahlen von GSI. Der Vorteil der neuen Therapie liegt darin, dass der Ionenstrahl seine größte Wirkung im Tumor erzielt und das umliegendChemische Elemente entstehen in Sternen und in Sternexplosionen. Sie sind der Stoff, aus dem die gesamte Materie - auch jedes Atom unseres Körpers - aufgebaut ist. Im Universum existiert noch eine Vielzahl von Atomen, die auf der Erde nicht vorkommen. Die Forscher bei GSI versuchen neue, bisher unbe},
+	abstract = {GSI Helmholtzzentrum für Schwerionenforschung Das GSI Helmholtzzentrum für Schwerionenforschung in Darmstadt betreibt eine große, weltweit einmalige Beschleunigeranlage für Ionen. Forscherinnen und Forscher aus aller Welt nutzen die Anlage für Experimente, um neue Erkenntnisse über den Aufbau dIn den nächsten Jahren wird bei GSI das neue internationale Beschleunigerzentrum FAIR entstehen, eines der größten Forschungsvorhaben weltweit. An FAIR wird eine nie dagewesene Vielfalt an Experimenten möglich sein, durch die Physiker aus aller Welt neue Einblicke in den Aufbau der Materie und die EBei GSI wurde eine bahnbrechende neue Krebstherapie entwickelt. Grundlage hierfür waren langjährige Forschungsarbeiten und die große Beschleunigeranlage für Ionenstrahlen von GSI. Der Vorteil der neuen Therapie liegt darin, dass der Ionenstrahl seine größte Wirkung im Tumor erzielt und das umliegendChemische Elemente entstehen in Sternen und in Sternexplosionen. Sie sind der Stoff, aus dem die gesamte Materie - auch jedes Atom unseres Körpers - aufgebaut ist. Im Universum existiert noch eine Vielzahl von Atomen, die auf der Erde nicht vorkommen. Die Forscher bei GSI versuchen neue, bisher unbe},
 	urldate = {2016-09-20},
 	journal = {GSI},
 	month = jun,
@@ -170,19 +170,18 @@
 	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\Z2NRHMBI\\446802.html:text/html}
 }
 
-@article{baudrenghien_low-level_2010,
-	title = {Low-{Level} {RF}},
-	volume = {13},
-	url = {https://cas.web.cern.ch/cas/Denmark-2010/Writeups/Baudrenghien.docx},
-	number = {14},
+@article{baudrenghien_lecture_2010,
+	title = {Lecture {Note}: {Low} {Level} {RF}},
+	url = {https://cas.web.cern.ch/cas/Denmark-2010/Lectures/Baudrenghien-1.pdf},
 	urldate = {2016-09-20},
+	journal = {CERN Accelerator School},
 	author = {Baudrenghien, P.},
 	year = {2010},
-	pages = {15},
 	file = {[DOC] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\VUCAN2EN\\Baudrenghien - 2010 - Low-level RF.doc:application/msword}
 }
 
 @phdthesis{grieser_beam_2015,
+	address = {Germany},
 	title = {Beam {Phase} {Feedback} in a heavy-ion {Synchrotron} with {Dual}-harmonic {Cavity} {System}},
 	url = {http://tuprints.ulb.tu-darmstadt.de/4634/},
 	urldate = {2016-09-21},
@@ -192,31 +191,33 @@
 	file = {[PDF] tu-darmstadt.de:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\3MG6UJ9P\\Grieser - 2015 - Beam phase feedback in a heavy-ion synchrotron wit.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\Q9C4XFZH\\4634.html:text/html}
 }
 
-@article{mandakovic_fair_nodate,
-	title = {{FAIR} {Fast} {Beam} {Abort} {System}},
-	url = {https://fair-wiki.gsi.de/foswiki/pub/FC2WG/FairC2WGMinutes/20151021_Fast_Beam_Abort_System_Mandakovic.pdf},
+@article{mandakovic_f-tc-c-02e_2015,
+	title = {F-{TC}-{C}-02e, {Conceptual} {Design} of {SIS}-100 {Fast} {Beam} {Abort} {System} ({MPS})},
 	urldate = {2016-09-21},
-	journal = {GSI Internal Document},
+	journal = {FAIR Technical Concept},
 	author = {Mandakovic, M.},
+	year = {2015},
 	file = {Fast Beam Abort System @ FAIR - 20151021_Fast_Beam_Abort_System_Mandakovic.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\FG2FZPNT\\20151021_Fast_Beam_Abort_System_Mandakovic.html:text/html}
 }
 
 @inproceedings{gross_bunch-by-bunch_2015,
+	address = {Richmond, Virginia, USA},
 	title = {Bunch-by-{Bunch} {Longitudinal} {RF} {Feedback} for {Beam} {Stabilization} at {FAIR}},
 	url = {http://accelconf.web.cern.ch/AccelConf/IPAC2015/papers/mopha021.pdf},
 	urldate = {2016-09-21},
 	booktitle = {Proc. of {IPAC}},
-	author = {Gross, K. and Hartel, U. and Laier, U. and Lens, D. and Ningel, K. P. and Schäfer, S. and Zipfel, B. and Klingbeil, H.},
+	author = {Gross, K. and others},
 	year = {2015},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\AP5TAMP7\\Gros s et al. - 2015 - Bunch-by-Bunch Longitudinal RF Feedback for Beam S.pdf:application/pdf}
 }
 
 @inproceedings{bai_bunch_2015,
+	address = {Melbourne, Australia},
 	title = {Bunch to {Bucket} {Transfer} {System} for {FAIR}},
 	url = {http://icalepcs.synchrotron.org.au/papers/wepgf119.pdf},
 	urldate = {2016-09-23},
 	booktitle = {Proc. of {ICALEPCS}},
-	author = {Bai, J. and Ferrand, T. and Beck, D. and Bär, R. and Kester, O. and Ondreka, D. and Prados, C. and Terpstra, W.},
+	author = {Bai, J. and others},
 	year = {2015},
 	file = {[PDF] synchrotron.org.au:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\G38R62RF\\Bai et al. - 2015 - BUNCH TO BUCKET TRANSFER SYSTEM FOR FAIR.pdf:application/pdf}
 }
@@ -247,18 +248,19 @@
 	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\KSFG4W7R\\S0168900206000507.html:text/html}
 }
 
-@techreport{garoby_timing_1984,
-	title = {Timing {Aspect} of {Bunch} {Transfer} between circular {Machines}. {State} of the {Art} in the {PS} {Complex}},
-	institution = {Note 84-6, 17 December 84},
+@article{garoby_cern-ps-rf-note-84-6_1984,
+	title = {{CERN}-{PS}-{RF}-{NOTE}-84-6, {Timing} {Aspect} of {Bunch} {Transfer} between {Circular} {Machines}: {State} of the {Art} in the {PS} {Complex}},
+	journal = {CERN Internal Publication},
 	author = {Garoby, R},
 	year = {1984}
 }
 
-@misc{barletta_overview_nodate,
-	title = {Overview on {Magnetic} fields},
+@article{barletta_lecture_nodate,
+	title = {Lecture {Note}: {Overview} on {Magnetic} fields},
 	url = {http://uspas.fnal.gov/materials/12MSU/xverse_dynamics.pdf},
 	urldate = {2016-09-26},
-	author = {Barletta, H.},
+	journal = {US Particle Accelerator School},
+	author = {Barletta, W. and Spentzouris, L. and Harms, E.},
 	file = {[PDF] fnal.gov:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\UPDIHEVJ\\notes Barletta and Spentzouris - 1 Overview on Magnetic fields.pdf:application/pdf}
 }
 
@@ -272,9 +274,9 @@
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\DGHSRW6X\\Bovet et al. - 1970 - A selection of formulae and data useful for the de.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\RNE8AERM\\280305.html:text/html}
 }
 
-@article{bai_concept_2016,
-	title = {Concept of the {FAIR} {Bunch} {To} {Bucket} {Transfer} {System}},
-	journal = {GSI Internal Document},
+@article{bai_f-tc-c-05_2016,
+	title = {F-{TC}-{C}-05, {Concept} of the {FAIR} {Bunch} {To} {Bucket} {Transfer} {System}},
+	journal = {FAIR Technical Concept},
 	author = {Bai, J. and Ferrand, T.},
 	year = {2016}
 }
@@ -284,13 +286,13 @@
 	url = {http://inspirehep.net/record/242805/files/HEACC86_I_206-210.pdf},
 	urldate = {2016-09-02},
 	journal = {GSI Internal Document},
-	author = {Böhne, D. and Prange, H. and Blasche, K. and Franzke, B. and Spiller, P and {others}},
+	author = {Böhne, D. and others},
 	year = {2008},
 	file = {[PDF] inspirehep.net:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\K7ETQ2W4\\Böhne et al. - 1986 - Status report on the SISESR project at GSI.pdf:application/pdf}
 }
 
 @article{blell_injection_2014,
-	title = {Injection and {Extraction} {Components} of {SIS} 100 / 300},
+	title = {Injection and {Extraction} {Components} of {SIS} 100/300},
 	journal = {GSI Internal Document},
 	author = {Blell, U.},
 	year = {2014}
@@ -317,11 +319,12 @@
 }
 
 @inproceedings{huhmann_fair_2013,
+	address = {San Francisco, California, USA},
 	title = {The {FAIR} {Control} {System}–{System} {Architecture} and {First} {Implementations}},
 	url = {http://epaper.kek.jp/ICALEPCS2013/papers/moppc097.pdf},
 	urldate = {2016-09-26},
-	publisher = {Proc. of ICALEPCS},
-	author = {Huhmann, R. and Bär, R. and Beck, D. and Fitzek, J. and Fröhlich, G. and Hechler, L. and Krause, U. and Thieme, M.},
+	booktitle = {Proc. of {ICALEPCS}},
+	author = {Huhmann, R. and others},
 	year = {2013},
 	file = {[PDF] kek.jp:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\2WD6NARU\\Huhmann et al. - 2013 - The FAIR control system–System architecture and fi.pdf:application/pdf}
 }
@@ -335,37 +338,41 @@
 	file = {TimingSystemEvent < Timing < Belwiki:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\94RXV26G\\TimingSystemEvent.html:text/html}
 }
 
-@article{beck_general_nodate,
+@article{beck_general_2013,
 	title = {The {General} {Machine} {Timing} {System} for {FAIR} and {GSI}},
 	url = {https://www-acc.gsi.de/wiki/pub/Timing/TimingSystemDocuments/GMT_Description_v3-1.pdf},
 	urldate = {2016-09-26},
 	journal = {GSI Internal Document},
-	author = {Beck, D. and Kreider, M. and Prados, C. and Terpstra, W. and Rauch, S. and Zweig, M.},
+	author = {Beck, D. and others},
+	year = {2013},
 	file = {GMT_Description_v3-1 - GMT_Description_v3-1.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\ZASQAR8R\\GMT_Description_v3-1.html:text/html}
 }
 
 @inproceedings{arruat_front-end_2007,
+	address = {Knoxville, Tennessee},
 	title = {Front-end {Software} {Architecture}},
 	volume = {7},
 	url = {http://accelconf.web.cern.ch/Accelconf/ica07/PAPERS/WOPA04.PDF},
 	urldate = {2016-09-26},
 	booktitle = {Proc. of {ICALEPCS}},
-	author = {Arruat, M. and Fernandez, L. and Jackson, S. and Locci, F. and Nougaret, J. and Peryt, M. and Radeva, A. and Sobczak, M. and Eynden, M. V.},
+	author = {Arruat, M. and others},
 	year = {2007},
 	pages = {310},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\D2NN6XIS\\Arruat et al. - 2007 - Front-end software architecture.pdf:application/pdf}
 }
 
-@techreport{ferrand_synchronization_2015,
-	title = {Synchronization of {Synchrotrons} for {Bunch}-to-{Bucket} {Transfers}},
+@article{ferrand_cern-acc-note-2015-0025_2015,
+	title = {{CERN}-{ACC}-{NOTE}-2015-0025, {Synchronization} of {Synchrotrons} for {Bunch}-to-{Bucket} {Transfers}},
 	url = {http://cds.cern.ch/record/2053285},
 	urldate = {2016-09-26},
+	journal = {CERN Internal Publication},
 	author = {Ferrand, T. and Klingbeil, H. and Damerau, H.},
 	year = {2015},
 	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\98CBNIEF\\2053285.html:text/html}
 }
 
 @inproceedings{tamura_synchronization_2006,
+	address = {Tokyo, Japan},
 	title = {Synchronization {System} for the {J}-{PARC} {RCS}},
 	url = {http://www.pasj.jp/web_publish/pasj3_lam31/Proceedings/W/WP64.pdf},
 	urldate = {2016-09-27},
@@ -386,6 +393,7 @@
 }
 
 @inproceedings{ferrand_system_2015,
+	address = {Richmond, Virginia, USA},
 	title = {System {Design} for a {Deterministic} {Bunch}-to-{Bucket} {Transfer}},
 	url = {http://accelconf.web.cern.ch/AccelConf/IPAC2015/papers/wepma024.pdf},
 	urldate = {2016-09-27},
@@ -396,7 +404,7 @@
 }
 
 @article{thieme_scu_2013,
-	title = {{SCU} {System} goes productive},
+	title = {{SCU} {System} {Goes} {Productive}},
 	url = {http://repository.gsi.de/record/68061/files/FG-CS-07.pdf},
 	urldate = {2016-09-27},
 	journal = {GSI Scientific Report},
@@ -410,7 +418,7 @@
 	url = {https://www-acc.gsi.de/wiki/pub/Timing/TimingSystemDocuments/PHN-ACC-RD-45.pdf},
 	urldate = {2016-09-27},
 	journal = {GSI Scientific Report},
-	author = {Beck, D. and Bär, R. and Kreider, M. and Prados, C. and Rauch, S. and Terpstra, W. and Zweig, M. and Fleck, T.},
+	author = {Beck, D. and others},
 	year = {2011},
 	file = {White Rabbit Technology as Basis for the FAIR Timing System - PHN-ACC-RD-45.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\TT7TI7ZF\\PHN-ACC-RD-45.html:text/html}
 }
@@ -437,18 +445,19 @@
 	number = {T166},
 	urldate = {2016-09-27},
 	journal = {Physica Scripta},
-	author = {Lestinsky, M. and Bräuning-Demian, A. and Danared, H. and Engström, M. and Enders, W. and Fedotova, S. and Franzke, B. and Heinz, A. and Herfurth, F. and al., et},
+	author = {Lestinsky, M. and others},
 	year = {2015},
 	pages = {014075},
 	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\Z99D9NJB\\meta.html:text/html}
 }
 
 @inproceedings{herfurth_low_2013,
+	address = {Mürren, Switzerland},
 	title = {The {Low} {Energy} {Storage} {Ring} {CRYRING}@ {ESR}},
 	url = {https://accelconf.web.cern.ch/accelconf/COOL2013/papers/thpm1ha01.pdf},
 	urldate = {2016-09-27},
 	booktitle = {Proc. of {COOL}},
-	author = {Herfurth, F. and Brauning-Demian, A. and Enders, W. and Danared, H. and al., et},
+	author = {Herfurth, F. and others},
 	year = {2013},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\UM45NNJ4\\Herfurth et al. - 2013 - The low energy storage ring CRYRING@ ESR.pdf:application/pdf}
 }
@@ -458,44 +467,50 @@
 	title = {Demonstration of {Longitudinal} {Stacking} in the {ESR} with {Barrier} {Buckets} and {Stochastic} {Cooling}},
 	url = {http://accelconf.web.cern.ch/AccelConf/COOL2011/papers/proceed.pdf#page=150},
 	urldate = {2016-09-27},
-	author = {Steck, M. and Dimopoulou, C. and Franzke, B. and Gorda, O. and Katayama, T. and Nolden, F. and Schreiber, G. and Möhl, D. and Stassen, R. and Meshkov, I. N. and al., et},
+	booktitle = {Proc. of {COOL}},
+	author = {Steck, M. and others},
 	year = {2011},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\6T7K84FM\\Steck et al. - 2011 - Demonstration of Longitudinal Stacking in the ESR .pdf:application/pdf}
 }
 
 @inproceedings{smirnov_particle_2009,
+	address = {Lanzhou, China},
 	title = {Particle {Accumulation} with a {Barrier} {Bucket} {RF} {System}},
 	booktitle = {Proc. of {COOL}},
-	author = {Smirnov, A. V. and Krestnikov, D. A. and Meshkov, I. N. and al., et},
+	author = {Smirnov, A. V. and others},
 	year = {2009}
 }
 
 @inproceedings{steck_advanced_2009,
+	address = {Vancouver, BC, Canada},
 	title = {Advanced {Design} of the {FAIR} {Storage} {Ring} {Complex}},
 	url = {https://accelconf.web.cern.ch/AccelConf/PAC2009/papers/fr1gri03.pdf},
 	urldate = {2016-09-27},
 	booktitle = {Proc. of {PAC}},
-	author = {Steck, M. and Bär, R. and Blell, U. and Dimopoulou, C. and Dolinskii, A. and Forck, P. and Franzke, B. and Gorda, O. and Gostishchev, V. and Jandewerth, U. and al., et},
+	author = {Steck, M. and others},
 	year = {2009},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\FZKGKHD7\\Steck et al. - 2008 - Advanced Design of the FAIR Storage Ring Complex.pdf:application/pdf}
 }
 
 @inproceedings{toelle_hesr_2007,
+	address = {Albuquerque, New Mexico},
 	title = {{HESR} at {FAIR}: {Status} of technical {Planning}},
 	shorttitle = {{HESR} at {FAIR}},
 	url = {http://epaper.kek.jp/p07/PAPERS/TUPAN024.PDF},
 	urldate = {2016-09-27},
 	booktitle = {Proc. of {PAC}},
-	author = {Toelle, R. and Bongardt, K. and Dietrich, J. and Esser, F. and Felden, O. and Greven, R. and Hansen, G. and Klehr, F. and Lehrach, A. and Lorentz, B. and al., et},
+	author = {Toelle, R. and others},
 	year = {2007},
 	file = {[PDF] kek.jp:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\U6ER6T4K\\Toelle et al. - 2007 - HESR at FAIR Status of technical planning.pdf:application/pdf}
 }
 
 @inproceedings{bai_first_2014,
+	address = {Karlsruhe, Germany},
 	title = {First {Idea} on {Bunch} to {Bucket} {Transfer} for {FAIR}},
 	url = {http://epaper.kek.jp/PCaPAC2014/posters/fpo024_poster.pdf},
 	urldate = {2016-09-27},
-	author = {Bai, J. and Bär, R. and Beck, D. and Ferrand13, T. and Kreider, M. and Ondreka, D. and Prados, C. and Rauch, S. and Terpstra, W. and Zweig, M.},
+	booktitle = {Proc. of {PCaPAC}},
+	author = {Bai, J. and others},
 	year = {2014},
 	file = {[PDF] kek.jp:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\A46CN2BZ\\Bai12 et al. - First Idea on Bunch to Bucket Transfer for FAIR.pdf:application/pdf}
 }
@@ -508,15 +523,17 @@
 	year = {1982}
 }
 
-@article{laier_funktional-spezifikation_2011,
+@article{laier_funktional-spezifikation_2015,
 	title = {Funktional-{Spezifikation} {DDS}},
 	journal = {GSI Internal Document},
-	author = {Laier, U.},
-	year = {2011}
+	author = {Laier, U. and Schäfer, S.},
+	year = {2015}
 }
 
 @phdthesis{ferrand_development_nodate,
-	title = {Development of the {LLRF} {System} for a deterministic {Bunch}-to-{Bucket} {Transfer} for {FAIR} ({Unpublished} doctoral thesis)},
+	address = {Germany},
+	type = {({Unpublished} doctoral thesis)},
+	title = {Development of the {LLRF} {System} for a {Deterministic} {Bunch}-to-{Bucket} {Transfer} for {FAIR}},
 	school = {Technical University Darmstadt},
 	author = {Ferrand, T.}
 }
@@ -551,32 +568,33 @@
 }
 
 @inproceedings{nolden_collector_2006,
+	address = {Edinburgh, Scotland},
 	title = {The {Collector} {Ring} {CR} of the {FAIR} {Project}},
-	volume = {3},
 	url = {http://accelconf.web.cern.ch/AccelConf/e06/PAPERS/MOPCH077.PDF},
 	urldate = {2016-10-27},
 	booktitle = {Proc. of {EPAC}},
-	author = {Nolden, F. and Beckert, K. and Beller, P. and Blell, U. and Dimopoulou, C. and Dolinskii, A. and Laier, U. and Moritz, G. and Muehle, C. and Nesmiyan, I. and al., et},
+	author = {Nolden, F. and others},
 	year = {2006},
-	pages = {5},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\X6V6DSVX\\Nolden et al. - 2006 - The Collector Ring CR of the FAIR project.pdf:application/pdf}
 }
 
-@misc{bar_technical_2013,
+@article{bar_technical_2013,
 	title = {Technical {Design} {Report} on the {Collector} {Ring}},
 	url = {https://indico.gsi.de/getFile.py/access?resId=7&materialId=slides&confId=2200},
 	urldate = {2016-10-27},
-	author = {Bär, R. and Blell, U. and Dimopoulou, C. and Dolinskii, A. and Forck, P. and Franzke, B. and al., et},
+	journal = {GSI Internal Document},
+	author = {Bär, R. and others},
 	year = {2013},
 	file = {[PDF] arxiv.org:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\BGA8MSA7\\Abe et al. - 2010 - Belle II technical design report.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\C3R7E9TP\\1011.html:text/html}
 }
 
 @inproceedings{toelle_hesr_2007-1,
+	address = {Albuquerque, NM, USA},
 	title = {{HESR} at {FAIR}: {Status} of technical {Planning}},
 	shorttitle = {{HESR} at {FAIR}},
 	url = {http://epaper.kek.jp/p07/PAPERS/TUPAN024.PDF},
 	urldate = {2016-10-27},
-	author = {Toelle, R. and Bongardt, K. and Dietrich, J. and Esser, F. and Felden, O. and Greven, R. and Hansen, G. and Klehr, F. and Lehrach, A. and Lorentz, B. and {others}},
+	author = {Toelle, R. and others},
 	year = {2007},
 	file = {[PDF] kek.jp:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\XDJ4BCF5\\Toelle et al. - 2007 - HESR at FAIR Status of technical planning.pdf:application/pdf}
 }
@@ -585,23 +603,26 @@
 	title = {{CRYRING}@ {ESR}: {A} {Study} {Group} {Report}},
 	shorttitle = {{CRYRING}@ {ESR}},
 	journal = {GSI and FAIR Report},
-	author = {Lestinsky, M. and al., et},
+	author = {Lestinsky, M. and others},
 	year = {2012}
 }
 
 @inproceedings{krause_re-engineering_2001,
+	address = {San Jose, California},
 	title = {Re-engineering of the {GSI} {Control} {System}},
 	url = {https://arxiv.org/pdf/physics/0111060.pdf},
 	urldate = {2016-10-27},
+	booktitle = {Proc. of {ICALEPCS}},
 	author = {Krause, U. and Schaa, V. RW},
 	year = {2001},
 	file = {[PDF] arxiv.org:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\7ZPPGI3F\\Krause und Schaa - 2001 - Re-engineering of the GSI control system.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\P2BJP4SV\\0111060.html:text/html}
 }
 
-@misc{kainberger_pzs_2003,
+@article{kainberger_pzs_2003,
 	title = {{PZS} - {SIS}/{ESR}-{Pulszentrale}},
 	url = {https://www-acc.gsi.de/data/documentation/eq-models/pzs/gm-pzs.pdf},
 	urldate = {2016-10-27},
+	journal = {GSI Internal Document},
 	author = {Kainberger, P},
 	year = {2003},
 	file = {PZS - SIS/ESR-Pulszentrale - Google-Suche:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\XEZE6DX3\\www.google.de.html:text/html}
@@ -615,27 +636,32 @@
 @misc{noauthor_notitle_nodate
 }
 
-@misc{noauthor_j-parc_nodate,
+@misc{noauthor_j-parc_2016,
 	title = {J-{PARC}},
-	url = {https://www.kek.jp/en/Facility/ACCL/J-PARC/}
+	url = {https://www.kek.jp/en/Facility/ACCL/J-PARC/},
+	year = {2016}
 }
 
-@misc{noauthor_brookhaven_nodate,
+@misc{noauthor_brookhaven_2017,
 	title = {Brookhaven {National} {Laboratory}},
-	url = {https://en.wikipedia.org/wiki/Brookhaven_national_laboratory}
+	url = {https://en.wikipedia.org/wiki/Brookhaven_national_laboratory},
+	year = {2017}
 }
 
-@misc{noauthor_fermi_nodate,
+@misc{noauthor_fermi_2016,
 	title = {Fermi {National} {Accelerator} {Laboratory}},
-	url = {http://www.fnal.gov/pub/science/particle-accelerators/accelerator-complex.html}
+	url = {http://www.fnal.gov/pub/science/particle-accelerators/accelerator-complex.html},
+	year = {2016}
 }
 
-@misc{noauthor_institute_nodate,
+@misc{noauthor_institute_2013,
 	title = {Institute of {Modern} {Physics} of the {Chinese} {Academy} of {Sciences}},
-	url = {http://english.imp.cas.cn/au/bi/201312/t20131231_115141.html}
+	url = {http://english.imp.cas.cn/au/bi/201312/t20131231_115141.html},
+	year = {2013}
 }
 
 @inproceedings{man_survey_2002,
+	address = {Spring-8, Japan},
 	title = {Survey and {Alignment} of {HIRFL}-{CSR} at {IMP}},
 	url = {http://www-group.slac.stanford.edu/met/IWAA/TOC_S/PAPERS/KMan02.pdf},
 	urldate = {2016-10-28},
@@ -645,24 +671,22 @@
 	file = {[PDF] stanford.edu:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\4NJIMFAK\\Man et al. - 2002 - Survey and Alignment of HIRFL-CSR at IMP.pdf:application/pdf}
 }
 
-@misc{steinhagen_tune_2008,
+@article{steinhagen_tune_2008,
 	title = {Tune and {Chromaticity} {Diagnostics}},
 	url = {https://cds.cern.ch/record/1213281/files/p317.pdf},
 	urldate = {2016-11-07},
-	publisher = {CERN},
+	journal = {CERN Document Server},
 	author = {Steinhagen, R. J.},
 	year = {2008},
 	file = {[PDF] researchgate.net:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\6FJ6WWZ8\\Steinhagen und others - 2008 - Tune and chromaticity diagnostics.pdf:application/pdf}
 }
 
 @inproceedings{petzenhauser_concept_2016,
-	address = {Busan, Korea,},
+	address = {Busan, Korea},
 	title = {Concept and {Design} of the {Injection} {Kicker} {System} for the {FAIR} {SIS}100 {Synchrotron}},
 	booktitle = {Proc. of {IPAC}},
-	publisher = {JACOW, Geneva, Switzerland},
-	author = {Petzenhauser, I. and Baandrup, L. and Bach, H. and Blell, U. and Blokesch, G. and Hauge, N. and Laurberg, K. and Osemann, M. and Spiller, P.},
+	author = {Petzenhauser, I. and others},
 	year = {2016},
-	pages = {3582--3584},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\XWSIGMUQ\\Petzenhauser et al. - 2016 - Concept and Design of the Injection Kicker System .pdf:application/pdf}
 }
 
@@ -676,9 +700,10 @@
 	file = {[PDF] anl.gov:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\22DK57IQ\\Wang - 1991 - Design of kicker magnet and power supply unit for .pdf:application/pdf}
 }
 
-@misc{noauthor_particle_nodate,
+@misc{noauthor_particle_2017,
 	title = {Particle {Accelerator}},
-	url = {https://en.wikipedia.org/wiki/Particle_accelerator}
+	url = {https://en.wikipedia.org/wiki/Particle_accelerator},
+	year = {2017}
 }
 
 @techreport{moller_beam-residual_1999,
@@ -694,36 +719,34 @@
 	title = {{SIS}18 {Sektoren} {Technische} {Zeichnungen} und {Fotografien}},
 	journal = {GSI Internal Document},
 	author = {Roß, J.},
-	month = jan,
 	year = {2008}
 }
 
-@article{blell_detailed_2014,
-	title = {Detailed {Specification} of the {SIS}100 {Injection} {Kicker} {Magnets} and their {Pulse} {Power} {Supplies}.},
-	journal = {GSI Internal Document},
+@article{blell_f-ds-ie-03e_2014,
+	title = {F-{DS}-{IE}-03e, {Detailed} {Specification} of the {SIS}100 {Injection} {Kicker} {Magnets} and their {Pulse} {Power} {Supplies}.},
+	journal = {FAIR Detailed Specification},
 	author = {Blell, U.},
-	month = nov,
 	year = {2014}
 }
 
-@misc{klingbeil_detailed_2013,
+@article{klingbeil_detailed_2013,
 	title = {Detailed {Specification} on the {LLRF} {DSP} {System} for {FAIR} {Ring} {RF} {Systems}},
-	publisher = {GSI Detailed Specification F-DS-RF-11e\_DSP-System},
+	journal = {GSI Internal Document},
 	author = {Klingbeil, H.},
 	year = {2013}
 }
 
-@misc{moritz_common_2012,
-	title = {Common {Specification} on the {Bunch} {Phase} {Timing} {System} ({BuTiS})},
-	publisher = {GSI Common Specification F-CS-RF-14e BuTiS},
+@article{moritz_f-cs-rf-14e_2012,
+	title = {F-{CS}-{RF}-14e {BuTiS}, {Common} {Specification} on the {Bunch} {Phase} {Timing} {System} ({BuTiS})},
+	journal = {FAIR Common Specification},
 	author = {Moritz, P.},
 	year = {2012}
 }
 
-@misc{kreider_receiver_2014,
+@article{kreider_receiver_2014,
 	title = {Receiver {Nodes} of the {General} {Machine} {Timing} {System} for {FAIR} and {GSI}},
-	publisher = {GSI Internal Document},
-	author = {Kreider, M. and Bai, J. and Beck, D. and Prados, C. and Terpstra, W. and Rauch, S. and Zweig, M.},
+	journal = {GSI Internal Document},
+	author = {Kreider, M. and others},
 	year = {2014}
 }
 
@@ -735,15 +758,23 @@
 	year = {2011}
 }
 
-@phdthesis{prados_wr_nodate,
-	title = {{WR} network ({Unpublished} doctoral thesis)},
+@phdthesis{prados_notitle_nodate,
+	address = {Germany},
+	type = {({Unpublished} doctoral thesis)},
 	school = {Technical University Darmstadt},
 	author = {Prados, C.}
 }
 
-@misc{terpstra_timing_2013,
+@article{terpstra_timing_2013,
 	title = {Timing {Receiver}: {Event}-{Condition}-{Action} ({ECA}) {Unit} {Design}},
-	publisher = {GSI Internal Document},
+	journal = {GSI Internal Document},
 	author = {Terpstra, W.},
 	year = {2013}
+}
+
+@article{kaiser_f-tn-c-008e_2014,
+	title = {F-{TN}-{C}-008e, {Detailed} {Documentation} of the {Scalable} {Control} {Unit} {SCU}3 {FG} 900.112},
+	journal = {FAIR Technical Note},
+	author = {Kaiser, K.},
+	year = {2014}
 }
